# static_gui_library

./: .clang-format  .gitignore  .mdlrc  Doxyfile  architecture.md  callable_test.cpp  compile_flags.txt  concepts.md  coverage.sh  encoder.hpp  input_handling.md  item.md  menu_example.cpp  menu_tester.cpp  meson.build  meson_options.txt  page.md  readme.md  sgl.hpp  sgl_boolean.hpp  sgl_button.hpp  sgl_callable.hpp  sgl_callable2.hpp  sgl_config.h  sgl_enum.hpp  sgl_error.hpp  sgl_fwd.hpp  sgl_index_sequence.hpp  sgl_input.hpp  sgl_item.hpp  sgl_macro.hpp  sgl_macro_undef.hpp  sgl_menu.hpp  sgl_menu_tester.hpp  sgl_numeric.hpp  sgl_page.hpp  sgl_page_link.hpp  sgl_smallest_type.hpp  sgl_static_string.hpp  sgl_string_view.hpp  (+13 more)
.github/workflows/: ci.yml
example/: example_readme.cpp  menu2.cpp  menu_tester.cpp  meson.build  qt_main.cpp
example/c_api/: sgl_c.cpp  sgl_c.h
gui/: display.cpp  display.hpp  label.cpp  label.hpp  list_widget.cpp  list_widget.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  menu_tree.cpp  menu_tree.hpp  meson.build  qt_item.cpp  qt_item.hpp  qt_menu.cpp  qt_menu.hpp  qt_page.cpp  qt_page.hpp  section.cpp  section.hpp
gui/resources/: section.qrc
include/: enum_map.hpp  item_fwd.hpp  item_traits.hpp  items.cpp  menu_tester.cpp  sgl.hpp  sgl_boolean.hpp  sgl_button.hpp  sgl_callable.hpp  sgl_config.h  sgl_cx_arg.hpp  sgl_enum.hpp  sgl_enum_map.hpp  sgl_error.hpp  sgl_format.hpp  sgl_index_sequence.hpp  sgl_input.hpp  sgl_item_base.hpp  sgl_item_base_detail.hpp  sgl_item_concepts.hpp  sgl_item_traits.hpp  sgl_items.hpp  sgl_limits.hpp  sgl_menu.hpp  sgl_menu_tester.hpp  sgl_named_tuple.hpp  sgl_named_tuple_index.hpp  sgl_numeric.hpp  sgl_page.hpp  sgl_page_link.hpp  sgl_pass_through_button.hpp  sgl_smallest_type.hpp  sgl_static_string.hpp  sgl_string_view.hpp  sgl_traits.hpp  sgl_tuple.hpp  sgl_tuple_impl.hpp  sgl_tuple_utils.hpp  sgl_type_list.hpp  sgl_type_traits.hpp  (+2 more)
include/impl/: sgl_boolean_impl.hpp  sgl_button_impl.hpp  sgl_callable_impl.hpp  sgl_enum_impl.hpp  sgl_enum_map_impl.hpp  sgl_format_impl.hpp  sgl_item_base_impl.hpp  sgl_menu_impl.hpp  sgl_named_tuple_impl.hpp  sgl_numeric_impl.hpp  sgl_page_impl.hpp  sgl_page_link_impl.hpp  sgl_pass_through_button_impl.hpp  sgl_tuple_impl.hpp
include/ryu/: common.hpp  d2fixed.hpp  d2fixed_full_table.hpp  d2s.hpp  d2s_full_table.hpp  d2s_intrinsics.hpp  d2s_small_table.hpp  digit_table.hpp  f2s.hpp  f2s_full_table.hpp  f2s_intrinsics.hpp  readme.md  ryu.hpp  ryu_parse.hpp  s2d.hpp  s2f.hpp
include/ryu/impl/: common_impl.hpp  d2fixed_impl.hpp  d2s_impl.hpp  f2s_impl.hpp  s2d_impl.hpp  s2f_impl.hpp
include/sgl/: array.hpp  boolean.hpp  button.hpp  callable.hpp  config.h  cx_arg.hpp  enum.hpp  enum_map.hpp  error.hpp  fix_point.hpp  format.hpp  fwd.hpp  index_sequence.hpp  input.hpp  item_base.hpp  item_concepts.hpp  item_traits.hpp  items.hpp  limits.hpp  menu.hpp  menu_tester.hpp  name.hpp  named_tuple.hpp  named_value.hpp  numeric.hpp  page.hpp  page_link.hpp  pair.hpp  pass_through_button.hpp  sgl.hpp  smallest_type.hpp  static_string.hpp  string_view.hpp  type_list.hpp
include/sgl/impl/: boolean_impl.hpp  button_impl.hpp  callable_impl.hpp  enum_impl.hpp  enum_map_impl.hpp  fix_point_impl.hpp  format_impl.hpp  input_impl.hpp  item_base_impl.hpp  menu_impl.hpp  name_impl.hpp  named_tuple_impl.hpp  named_value_impl.hpp  numeric_impl.hpp  page_impl.hpp  page_link_impl.hpp  pass_through_button_impl.hpp  static_string_impl.hpp  string_view_impl.hpp
include/sgl/qt/: display.cpp  display.hpp  display_item.cpp  display_item.hpp  display_page.cpp  display_page.hpp  label.cpp  label.hpp  mainwindow.cpp  mainwindow.hpp  menu_tree.cpp  menu_tree.hpp  meson.build  section.cpp  section.hpp
markdown/: architecture.md  concepts.md  external_updates.md  input_handling.md  integrating.md  page.md  visualizer.md
subprojects/: gcem.wrap  ryu.wrap
subprojects/packagefiles/gcem/: meson.build
subprojects/packagefiles/ryu/: meson.build
tests/: array.cpp  callable.cpp  cx_arg.cpp  enum_map.cpp  fixed.cpp  fixed_point.cpp  format.cpp  input.cpp  item_concept.cpp  limits.cpp  main.cpp  menu.cpp  meson.build  name.cpp  named_tuple.cpp  named_value.cpp  page.cpp  pair.cpp  static_string.cpp  string_view.cpp  type_list.cpp
tests/ryu/: common_test.cpp  d2fixed_test.cpp  d2s_intrinsics_test.cpp  d2s_table_test.cpp  d2s_test.cpp  f2s_test.cpp  ryu_test_util.hpp  s2d_test.cpp  s2f_test.cpp
tests/ryu/cx/: cx_test_util.hpp  d2fixed_test.cpp  d2s_intrinsics_test.cpp  d2s_test.cpp  f2s_test.cpp  s2d_test.cpp  s2f_test.cpp
